--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -28,7 +28,7 @@ nav a:hover {
 }
 .top {
     display:flex;
-    background-color: #000000;
+    background-color: #487a5e;
     margin: 10px;
     padding:15px;
     border-radius: 1em;
@@ -113,6 +113,10 @@ h1, p, .skills {
 .other {
     color:#ffffff;
 }
-.contact {
+.contact, .contact2 {
     color:#ffffff;
+}
+.form {
+    margin: 0 auto;
+    padding-left: 2em;
 }
