--- a/portfolio/final/styles.css
+++ b/portfolio/final/styles.css
@@ -59,7 +59,7 @@ body {
 }
 .left3{
     display:flex;
-    background-color: #1D1B34;
+    background-color: #F7D735;
     justify-content: center;
     flex-basis: 50%;
     padding:2em;
