--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -8,6 +8,8 @@ a {
 }
 h1, h2{
     color:#487a5e;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Ropa Sans', sans-serif;
 }
 h1 {
     text-align:center;
