--- a/portfolio/final/styles.css
+++ b/portfolio/final/styles.css
@@ -47,6 +47,58 @@ body {
     display: block;
     margin: 0 auto;
 }
+.row-5{
+    display:flex;
+    flex-wrap: wrap;
+}
+.left-5{
+    background-color: #EA5292;
+    display:flex;
+    flex:1;
+    justify-content: center;
+    padding:2em;
+}
+.right-5{
+    background-color: #FBAF63;
+    display:flex;
+    flex:1;
+    justify-content: center;
+    padding:2em;
+}
+.row-3{
+    display:flex;
+    flex-wrap: wrap;
+}
+.left-3{
+    display:flex;
+    flex:1;
+    background-color: #F7D735;
+    justify-content: center;
+    padding:2em;
+}
+.right-3{
+    display:flex;
+    justify-content: center;
+    flex:1;
+    background-color: #FBAF63;
+    padding:2em;
+}
+.row-2{
+    display:flex;
+    background-color:#EA5292;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.row-1{
+    display:flex;
+    flex-wrap: wrap;
+}
+.left-2, .right-2, .mid-2{
+    padding:2em;
+}
+.row-1 img{
+    object-fit: scale-down;
+}
 .row1 {
     display:flex;
 }
@@ -63,6 +115,41 @@ body {
     display:flex;
     justify-content: center;
     padding:2em;
+}
+.left-1{
+    background-color:#FBAF63;
+    justify-content: center;
+    display:flex;
+    flex-basis: 50%;
+    flex:1;
+    padding:2em;
+}
+.right-1{
+    background-color:#67C8C5;
+    justify-content: center;
+    display:flex;
+    flex-basis: 50%;
+    flex:1;
+    padding:2em;
+}
+.row-1{
+    display:flex;
+    justify-content: center;
+    flex: 1;
+    flex-wrap:wrap;
+    width:100%;
+}
+.row0 {
+    display:flex;
+    background-color:#1D1B34;;
+    justify-content: center;
+    flex:1;
+    padding:5em;
+    flex-wrap: wrap;
+}
+
+.left0{
+    padding-right:2em;
 }
 .row2 {
     display:flex;
@@ -99,6 +186,13 @@ body {
 }
 .left4{
     display:flex;
+    background-color: #67C8C5;
+    justify-content: center;
+    padding:2em;
+    flex-wrap:wrap;
+}
+.left-4, .right-4, .mid-4{
+    padding:2em;
 }
 .right4 {
     display:flex;
@@ -646,12 +740,18 @@ input[type=submit]:hover {
         border-bottom: .20em solid #1D1B34;
     }
     .aboutparagraph {display:none;}
-
   }
+  
   @media only screen and (min-width: 700px) {
     #hamicon {display:none;}
     #close {display:none;}
     nav {display:block;}
     .infosmaller {display:none;}
     .formtitle {display:none;}
+    .left0 {display:none;}
   }
+
+  @media only screen and (max-width: 700px) {
+    .row0 {display:none;}
+    }
+  
